k8s/applications/tools/it-tools/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools
  namespace: it-tools
spec:
  parentRefs:
    - name: internal
      namespace: gateway
    - name: external
      namespace: gateway
  hostnames:
    - "ittools.smadja.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
